[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprites/Background.png" type="Texture" id=1]
[ext_resource path="res://Common/Res/Themes/DefaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://Common/Stages/MenuStage.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/Tutorial.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Logo.png" type="Texture" id=5]
[ext_resource path="res://Common/Res/Fonts/NunitoSans-16.tres" type="DynamicFont" id=6]
[ext_resource path="res://Common/Stages/Version.gd" type="Script" id=7]

[node name="MenuStage" type="Node"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 216.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
margin_left = 860.0
margin_top = 348.0
margin_right = 1060.0
margin_bottom = 515.0

[node name="PlayGame" type="Button" parent="Control/CenterContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 53.0
rect_min_size = Vector2( 200, 0 )
text = "Play"

[node name="Tutorial" type="Button" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 200.0
margin_bottom = 110.0
text = "Tutorial"

[node name="Quit" type="Button" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 200.0
margin_bottom = 167.0
text = "Quit"

[node name="TutorialPanel" type="TextureRect" parent="Control"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="CloseButton" type="Button" parent="Control/TutorialPanel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -266.0
margin_top = -101.0
margin_right = -116.0
margin_bottom = -48.0
text = "Close"

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -230.5
margin_top = -249.5
margin_right = 230.5
margin_bottom = -86.5
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -303.0
margin_top = -93.0
margin_right = -40.0
margin_bottom = -48.0
custom_fonts/font = ExtResource( 6 )
align = 2
script = ExtResource( 7 )

[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/PlayGame" to="." method="_on_PlayGame_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Control/TutorialPanel/CloseButton" to="." method="_on_CloseButton_pressed"]
